// MARK: - Common
"common.ok" = "OK";
"common.cancel" = "Cancel";
"common.save" = "Save";
"common.delete" = "Delete";
"common.edit" = "Edit";
"common.done" = "Done";
"common.error" = "Error";
...
